WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120436
Fix compositing layers in columns
https://bugs.webkit.org/show_bug.cgi?id=120436
Summary
Fix compositing layers in columns
Simon Fraser (smfr)
Reported
2013-08-28 13:54:14 PDT
Fix compositing layers in columns
Attachments
Patch
(39.29 KB, patch)
2013-08-28 13:58 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-08-28 13:58:28 PDT
Created
attachment 209920
[details]
Patch
Dave Hyatt
Comment 2
2013-08-28 14:00:03 PDT
Comment on
attachment 209920
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209920&action=review
r=me
> Source/WebCore/rendering/RenderLayer.h:605 > + enum ColumnOffsetAdjustment { DontAdjustForColumns, AdjustForColumns }; > + void convertToPixelSnappedLayerCoords(const RenderLayer* ancestorLayer, IntPoint& location, ColumnOffsetAdjustment adjustForColumns = DontAdjustForColumns) const; > + void convertToPixelSnappedLayerCoords(const RenderLayer* ancestorLayer, IntRect&, ColumnOffsetAdjustment adjustForColumns = DontAdjustForColumns) const; > + void convertToLayerCoords(const RenderLayer* ancestorLayer, LayoutPoint&, ColumnOffsetAdjustment adjustForColumns = DontAdjustForColumns) const; > + void convertToLayerCoords(const RenderLayer* ancestorLayer, LayoutRect&, ColumnOffsetAdjustment adjustForColumns = DontAdjustForColumns) const;
I think above these functions would be a good place for a FIXME describing that this is just a hack to get compositing layers to show up in a single column, and that eventually we want them to work when split across columns.
Simon Fraser (smfr)
Comment 3
2013-08-28 15:52:24 PDT
https://trac.webkit.org/r154785
<
rdar://problem/14664586
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug